# stackstate-etl-agent-check

./: .gitignore  README.md  build.py  pyproject.toml
src/: etl.py
src/stackstate_etl_check_processor/: agent_processor.py
src/sts_etl_check/: etl.py
src/sts_etl_check/stackstate_etl_check_processor/: __init__.py  agent_processor.py
tasks/: agent.py  build.py
tasks/dev-agent/: Dockerfile
tasks/py27/: PKG-INFO  setup.py
tests/: test_etl_check.py
tests/resources/conf.d/etl.d/: conf.yaml.example
tests/resources/share/: install.sh
