[tool.poetry]
name = "stackstate-etl-agent-check"
version = "0.1.0"
description = "StackState Extract-Transform-Load Agent Check for 4T data ingestion"
authors = ["Ravan Naidoo <rnaidoo@stackstate.com>"]
build = "build.py"
packages = [
    { include = "stackstate_etl_check_processor", from = "src/sts_etl_check" }
]


[tool.poetry.dependencies]
python = ">=2.7,<3.0.0 || >=3.7.0"
stackstate-etl = {git = "git@github.com:stackstate-lab/stackstate-etl.git", rev = "v0.1.0"}

[tool.poetry.dev-dependencies]
pytest = "*"
tox = "^3.22.0"
# StackState Agent Integration dev deps
prometheus-client = "^0.3.0"
Deprecated = "^1.2.11"
pytest-sugar = "^0.9.4"
colorama = "^0.4.1"
tabulate = "^0.8.9"
requests-mock = "^1.9.3"
py-backwards = "^0.7"

[tool.tox]
legacy_tox_ini = """
[tox]
requires =
    tox-py-backwards
isolated_build = true
envlist = py27
[testenv]
whitelist_externals = poetry
poetry_add_dev_dependencies = True
deps =
    -e git+https://github.com/StackVista/stackstate-agent-integrations.git@1.20.0#egg=stackstate_checks_base&subdirectory=stackstate_checks_base
    pytest
    pytest-sugar
    prometheus-client
    six
    Deprecated
    requests
    enum34
py_backwards = true
commands =
    pip uninstall -y etl
    poetry install
    poetry run pytest -W ignore::DeprecationWarning
"""

#######################################################################################################################
# Black
#######################################################################################################################

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

#######################################################################################################################
# FlakeHell
#######################################################################################################################

[tool.flakehell]
exclude = ["README.rst", "README.md", ".eggs", ".tox", "build",".venv", ".agent"]
include = ["src", "tests"]
format = "colored"
max_line_length = 120
show_source = true
# Temp fix until issue is fixed https://github.com/flakehell/flakehell/issues/10
extended_default_ignore=[]

[tool.flakehell.plugins]
"*" = [
    "+*",
    "-E203",
]

#######################################################################################################################
# MyPy
#######################################################################################################################

[tool.mypy]
python_version = 3.7
namespace_packages = true
explicit_package_bases = true
exclude = [
    '.*test_explore_apis\.py'
]

[[tool.mypy.overrides]]
module = "schematics.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "stackstate_checks.base.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "stackstate_etl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "stackstate_etl_check_processor.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath_ng.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asteval.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydash.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "urllib3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytz.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "six.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

#######################################################################################################################
# Build System
#######################################################################################################################

[build-system]
requires = ["setuptools", "py_backwards", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
